# openclatura

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  test.py  test_opsin_mac.py  test_opsin_qm9_batch.py  test_q.py  test_via_opsin.py  testing_guide.md  to_claude.txt  to_claude_2.txt
.github/workflows/: ci.yml  docker-image.yml
docker/: compose.yaml
eval_failures/pubchem/: all_failures.csv  failures_seed_17.csv  failures_seed_42.csv  failures_seed_5.csv  failures_seed_63.csv  failures_seed_87.csv  summary.csv
eval_failures/zinc22/: failures_seed_17.csv  failures_seed_42.csv  failures_seed_5.csv  failures_seed_63.csv  failures_seed_87.csv  summary.csv
evals/: .env  README.md  eval.py  eval_completion.py  run_completion.sh  validate_stout_opsin.py
evals/data/: Tm.csv  aqsoldb.csv
evals/embeds/: photoswitches_iupac.pkl  photoswitches_smiles.pkl
evals/pubchem_stout_5x100k/: pubchem_seed17_100000_opsin_summary.json  pubchem_seed42_100000_opsin_summary.json  pubchem_seed5_100000_opsin_summary.json  pubchem_seed63_100000_opsin_summary.json  pubchem_seed87_100000_opsin_summary.json
evals/zinc22_stout_eval/: summary.csv
evaluations/: README.md  RERUN.md  backends.py  check_regression.py  environment.yml  evaluate.py  predict.py  run_all_evals.sh  score_opsin.py  score_opsin_std.py  setup_env.sh  stout_batch_gpu.py  stout_parity.py
evaluations/STOUT-pypi-2.0.5/STOUT/: __init__.py  stout.py
evaluations/plots/: failure_vs_size.py  time_vs_size.py
evaluations/results/pubchem/: pubchem_seed17_100000_openclatura_opsin_failures.csv  pubchem_seed17_100000_openclatura_opsin_summary.json  pubchem_seed17_100000_stout_opsin_failures.csv  pubchem_seed17_100000_stout_opsin_summary.json  pubchem_seed42_100000_openclatura_opsin_failures.csv  pubchem_seed42_100000_openclatura_opsin_summary.json  (+14 more)
examples/: README.md  eval_via_opsin.py  find_small_failures.py  opsin_eval_ZINC22.py  opsin_eval_pubchem.py  qm9_iupac_collect_token_confidence.py  random_sanity.py  sanity_examples.py  test_opsin_mac.py  test_opsin_mac_ZINC.py  test_opsin_mac_ZINC22.py  test_opsin_mac_ZINC22_light.py  test_opsin_mac_qm9.py  test_qm9_opsin_batch.py  utils.py
scripts/: regenerate_goldens.py
src/bluenamer/: NAMER_REFACTOR.md  __init__.py  assembler.py  assembly_charge.py  assembly_parent.py  assembly_parts.py  assembly_prefixes.py  chains.py  charge_pair_roles.py  cli.py  component_group_rules.py  component_modifiers.py  component_namer.py  describer.py  engine.py  formatting.py  functional_groups.py  functional_prefixes.py  fused_ion_templates.py  fused_topology.py  grammar_snapshot_data.py  graph_io.py  group_atom_roles.py  heteroatom_subgraphs.py  heteroatom_substituent_specs.py  heterocumulene_roles.py  human_descriptor.py  ionic_naming.py  locants.py  molecule.py  name_assembly.py  name_bindings.py  name_operations.py  namer.py  namer_config.py  naming_audit.py  naming_context.py  naming_data.py  nitrogen_roles.py  nomenclature.py  (+29 more)
src/bluenamer/data/: namer_rules.json  (+4 more)
src/openclatura/: __init__.py  additive.py  assembler.py  assembly_charge.py  assembly_parts.py  assembly_prefixes.py  assembly_utils.py  chains.py  charge_pair_roles.py  charge_specs.py  cli.py  component_modifiers.py  component_namer.py  describer.py  engine.py  formatting.py  functional_prefixes.py  fused_ion_templates.py  fused_topology.py  grammar_snapshot_data.py  graph_io.py  graph_queries.py  heteroatom_subgraphs.py  human_descriptor.py  hypervalent_roles.py  ionic_naming.py  locants.py  molecule.py  name_assembly.py  name_bindings.py  name_operations.py  namer.py  namer_config.py  naming_audit.py  naming_context.py  naming_data.py  naming_protocols.py  nitrogen_roles.py  nomenclature.py  opsin_verify.py  (+26 more)
structure_to_iupac/: NAMER_REFACTOR.md  __init__.py  additive.py  assembler.py  assembly_charge.py  assembly_parent.py  assembly_parts.py  assembly_prefixes.py  assembly_spiro.py  assembly_utils.py  chains.py  charge_specs.py  component_group_rules.py  component_modifiers.py  component_namer.py  engine.py  formatting.py  functional_groups.py  functional_prefixes.py  graph_io.py  group_atom_roles.py  heteroatom_subgraphs.py  ionic_naming.py  locants.py  map_namer.md  molecule.py  name_operations.py  name_postprocessing.py  namer.py  namer_config.py  naming_audit.py  naming_context.py  naming_data.py  nomenclature.py  numbering.py  overview_namer.md  parent_pipeline.py  parent_selection.py  perception.py  polycycle_topology.py  (+12 more)
structure_to_iupac/data/: heteroatom_substituents.json  namer_rules.json
structure_to_iupac/rules/: bonds.py  elements.py  elision.py  locants.py  multipliers.py  retained.py  stems.py  substituents.py  suffixes.py
structure_to_iupac/tests/: test_analysis.py
structure_to_iupac/tests_roundtrip/: __init__.py  roundtrip_helpers.py  test_acids.py  test_alcohols.py  test_alkanes.py  test_alkenes_alkynes.py  test_api.py  test_bridges.py  test_charged_fused_heteroaromatics.py  test_composite_bridges.py  test_fused_multiplicity.py  test_fused_parents.py  test_haloalkanes.py  test_heteroatom_substituents.py  test_heterocycles.py  test_imines.py  test_ketones.py  test_locant_display.py  test_nitro.py  test_numbering.py  test_oxyacids.py  test_p13_additive.py  test_p13_conjunctive.py  test_p13_fusion.py  test_p13_multiplicative.py  test_p13_operations.py  test_p13_replacement.py  test_p13_substitutive.py  test_p13_subtractive.py  test_polycycles.py  test_polycyclic_descriptors.py  test_polyfunctional_fragments.py  test_principal_group_breadth.py  test_replacement_parents.py  test_stereo.py  test_substituents.py
tests/datasets/: test_pubchem_sample.py  test_qm9_sample.py
tests/fixtures/: diverse_corpus.csv  diverse_corpus.golden.json
tests/fuzz/: test_smiles_strategies.py
tests/integration/: test_corpus_golden.py  test_describer.py  test_diverse_corpus.py  test_human_descriptor.py  test_web_app.py
website/: requirements.txt  vercel.json
website/api/: index.py
website/public/: index.html
website/scripts/: cache_size.py
(+169 files in other folders)
