[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclatura"
version = "0.1.5"
description = "Deterministic SMILES-to-IUPAC name generator based on the IUPAC Blue Book"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adrian Mirza" },
    { name = "Kevin Maik Jablonka" },
    { name = "Rostislav Fedorov" },
]
keywords = ["chemistry", "iupac", "smiles", "nomenclature", "rdkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "rdkit>=2023.09",
]

[project.optional-dependencies]
opsin = [
    "py2opsin>=1.2",
]
datasets = [
    "datasets>=2.0",
    "pandas>=2.0",
    "huggingface-hub>=0.20",
    "tqdm>=4.65",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "hypothesis>=6.92",
    "ruff==0.15.15",
    "pre-commit>=3.5",
    "py2opsin>=1.2",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/lamalab-org/openclatura"
Repository = "https://github.com/lamalab-org/openclatura"
Issues = "https://github.com/lamalab-org/openclatura/issues"

[project.scripts]
openclatura = "openclatura.cli:main"

[tool.hatch.build]
exclude = [
    "/examples",
    "/evaluations",
    "/eval_failures",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openclatura"]


[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]
extend-exclude = ["**/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default arg (FastAPI uses this)
    # The following are tolerated in the existing codebase and slated for
    # gradual cleanup; tightening them all at once would balloon PR1.
    "E701",  # multiple statements on one line (used in compact dispatchers)
    "E741",  # ambiguous variable name (chemistry domain uses l, O, etc.)
    "B905",  # zip() without strict=
    "B007",  # unused loop control variable
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
    "src/openclatura/tests",
    "src/openclatura/tests_roundtrip",
]
addopts = [
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "opsin: requires py2opsin and Java",
    "dataset: requires the [datasets] extra and network access",
    "fuzz: hypothesis-based fuzz tests",
    "golden: strict golden-output regression test; run via the rdkit-compat job",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["openclatura"]
omit = ["*/tests/*", "*/tests_roundtrip/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
